service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-nginx
spec:
  selector:
    app: test-nginx
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
